--- a/bridal.html
+++ b/bridal.html
@@ -33,25 +33,22 @@
 	
 	<div class="row">
 		<div class="column">
-			<h2> Bridal Flores </h2>
 				<img src="img/bridal2.jpg" alt="Flores">
 			</div>
 
 		<div class="column">
-			<h2> Bridal Sushi </h2>
 				<img src="img/bridal3.jpg" alt="Sushi">
 		</div>
 	</div>
 		<div class="row">
 			<div class="column">
-				<h2> Bridal Chalk </h2>
-					<img src="img/bridal1.jpg" alt="Dinosaurio Verde">
+
+					<img src="img/bridal1.jpg" alt="Chalk">
 			</div>
 	
 	
 		<div class="column">
-			<h2> Bridal Flamingo </h2>
-				<img src="img/bridal4.jpg" alt="Dinosaurio Azul">
+				<img src="img/bridal4.jpg" alt="Flamingo">
 		</div>	
 
 	</div>
