--- a/bridal.html
+++ b/bridal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Birthdays</title>
+	<title>Bridal</title>
 	<link rel="stylesheet"  href="css/bridal.css">
 	<link rel="stylesheet"  href="css/reset.css">
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Oxygen|Parisienne" rel="stylesheet">
