--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cuarto de Papel Home</title>
-	<link rel="stylesheet"  href="css/style.css">
 	<link rel="stylesheet"  href="css/reset.css">
+	<link rel="stylesheet"  href="css/style.css">
+
 	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Oxygen|Parisienne" rel="stylesheet">
 
 </head>
@@ -19,10 +20,10 @@
 	
 	<nav>
 		<ul style="list-style-type:none">
-			<li><a href="index.html" target="_blank">Home</a></li>
-			<li><a href="baby.html" target="_blank">Baby Shower</a></li>
-			<li><a href="bridal.html" target="_blank">Bridal Shower</a></li>
-			<li><a href="birth.html" target="_blank">Birthdays</li>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="baby.html">Baby Shower</a></li>
+			<li><a href="bridal.html">Bridal Shower</a></li>
+			<li><a href="birth.html">Birthdays</li>
 			<li>Weddings</li>
 			<li>Contact</li>
 		</ul>
@@ -30,14 +31,14 @@
 
 	<section>
 		<article>
-			<div class="row">
-				<div class="column">
+			<div class="homerow">
+				<div class="homecolumn">
 					<h2>Bridal Shower Invites</h2>
 						<img src="img/bridal.jpg" alt="Bridal">
 							<h4>RD$550.00</h4>
 								<p>This listing is for a DIGITAL FILE that has been personalized with your invitation details. You can then use this to print as many copies as required, however please note that no physical items will be shipped to you.</p>
 				</div>
-				<div class="column">
+				<div class="homecolumn">
 					<h2>Baby Shower Invites</h2>
 						<img src="img/prince.jpg" alt="Baby Shower">
 							<h4>RD$550.00</h4>
@@ -45,14 +46,14 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="column">
+			<div class="homerow">
+				<div class="homecolumn">
 					<h2>Birthdays Invites</h2>
 						<img src="img/flam.jpg" alt="Birthdays">
 							<h4>RD$550.00</h4>
 								<p>This listing is for a DIGITAL FILE that has been personalized with your invitation details. You can then use this to print as many copies as required, however please note that no physical items will be shipped to you.</p>
 				</div>
-				<div class="column">
+				<div class="homecolumn">
 					<h2>Weddings Invites</h2>
 						<img src="img/wed.jpg" alt="Weddings">
 							<h4>RD$550.00</h4>
